--- a/k8s-config/db-volume-persistentvolumeclaim.yaml
+++ b/k8s-config/db-volume-persistentvolumeclaim.yaml
@@ -3,7 +3,7 @@ kind: PersistentVolumeClaim
 metadata:
   creationTimestamp: null
   labels:
-    io.kompose.service: db-volume
+    home.lab: db-volume
   name: db-volume
 spec:
   accessModes:
