--- a/apps/users-microservice/app-config/deployment.yaml
+++ b/apps/users-microservice/app-config/deployment.yaml
@@ -6,13 +6,13 @@ metadata:
     kompose.version: 1.26.0 (40646f47)
   creationTimestamp: null
   labels:
-    io.kompose.service: user-service
-  name: user-service
+    home.lab: user-app
+  name: user-app
 spec:
   replicas: 3
   selector:
     matchLabels:
-      io.kompose.service: user-service
+      home.lab: user-app
   strategy: {}
   template:
     metadata:
@@ -21,18 +21,20 @@ spec:
         kompose.version: 1.26.0 (40646f47)
       creationTimestamp: null
       labels:
-        io.kompose.network/my-networks: "true"
-        io.kompose.service: user-service
+        home.lab/micro-lab-network: "true"
+        home.lab: user-app
     spec:
       containers:
         - image: claudiojunior/app-users
           imagePullPolicy: IfNotPresent
-          name: user-service
+          name: user-app
           ports:
             - containerPort: 3000
           resources:
+            requests:
+              cpu: "250m"
             limits:
-              cpu: "0.1"
+              cpu: "0.5"
               memory: 200M
       restartPolicy: Always
 status: {}
