--- a/apps/users-microservice/app-config/service.yaml
+++ b/apps/users-microservice/app-config/service.yaml
@@ -6,14 +6,15 @@ metadata:
     kompose.version: 1.26.0 (40646f47)
   creationTimestamp: null
   labels:
-    io.kompose.service: user-database
-  name: user-database
+    home.lab: user-app
+  name: user-app
 spec:
+  type: ClusterIP
   ports:
-    - name: "3306"
-      port: 3306
-      targetPort: 3306
+    - protocol: TCP
+      port: 3000
+      targetPort: 3000
   selector:
-    io.kompose.service: user-database
+    home.lab: user-app
 status:
   loadBalancer: {}
