--- a/databases/users/app-config/deployment.yaml
+++ b/databases/users/app-config/deployment.yaml
@@ -6,13 +6,13 @@ metadata:
     kompose.version: 1.26.0 (40646f47)
   creationTimestamp: null
   labels:
-    io.kompose.service: user-database
+    home.lab: user-database
   name: user-database
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: user-database
+      home.lab: user-database
   strategy:
     type: Recreate
   template:
@@ -22,8 +22,8 @@ spec:
         kompose.version: 1.26.0 (40646f47)
       creationTimestamp: null
       labels:
-        io.kompose.network/my-networks: "true"
-        io.kompose.service: user-database
+        home.lab/micro-lab-network: "true"
+        home.lab: user-database
     spec:
       containers:
         - env:
