chore: move db project and add company data

--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,6 +1,6 @@
 FROM mysql:8.0
 
-COPY USERS.sql /docker-entrypoint-initdb.d/db.sql
+COPY DB_DUMP.sql /docker-entrypoint-initdb.d/db.sql
 # COPY my.cnf /etc/mysql/my.cnf
 
 # RUN /entrypoint.sh mysqld & sleep 30 && killall mysqld
