--- a/apps/company-microservice/package.json
+++ b/apps/company-microservice/package.json
@@ -25,8 +25,10 @@
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-fastify": "^9.2.1",
     "@nestjs/sequelize": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "cache-manager": "^5.1.4",
     "dotenv": "^16.0.3",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
