--- a/.github/workflows/app-users-image-build.yml
+++ b/.github/workflows/app-users-image-build.yml
@@ -7,20 +7,23 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
+    
     - name: Docker Login
       env:
         DOCKER_USER: ${{secrets.DOCKER_USER}}
         DOCKER_PASS: ${{secrets.DOCKER_PASS}}
       run:
         docker login -u $DOCKER_USER -p $DOCKER_PASS
+    
     - name: Build the Docker image
       run: cd ./apps/users-microservice && docker build . --file Dockerfile --tag claudio1091/app-users:$(date +%s)
+
     - name: Docker push
-      run: docker push ${{secrets.DOCKER_USER}}/app-users
+      env:
+        DOCKER_USER: ${{secrets.DOCKER_USER}}
+      run: docker push ${{DOCKER_USER}}/app-users
